<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_bt_mac"
                android:layout_width="100dp"
                android:layout_height="58dp"
                android:paddingLeft="12dp"
                android:text="@string/txt_bt_mac"
                android:textSize="25dp"
                android:gravity="left" />
            <EditText
                android:id="@+id/edt_bt_mac"
                android:layout_width="200dp"
                android:layout_height="58dp" />
            <Button
                android:id="@+id/btn_pair"
                android:layout_width="100dp"
                android:layout_height="58dp"
                android:text="@string/btn_pair"
                android:textSize="25dp"
                android:gravity="center" />
            <Button
                android:id="@+id/btn_unpair"
                android:layout_width="100dp"
                android:layout_height="58dp"
                android:text="@string/btn_unpair"
                android:textSize="25dp"
                android:gravity="center" />
            <TextView
                android:id="@+id/txt_bt_msg"
                android:layout_width="fill_parent"
                android:layout_height="58dp"
                android:paddingLeft="12dp"
                android:textSize="25dp"
                android:gravity="left" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:text="@string/btn_connect"
            android:textSize="25dp"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:text="@string/btn_disconnect"
            android:textSize="25dp"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_start_auto_connect"
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:text="@string/btn_start_auto_connect"
            android:textSize="25dp"
            android:gravity="center" />

        <Button
            android:id="@+id/btn_stop_auto_connect"
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:text="@string/btn_stop_auto_connect"
            android:textSize="25dp"
            android:gravity="center" />
    </LinearLayout>


</LinearLayout>
